# sysmonitor

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  package-lock.json  package.json
scripts/: build-sidecar.ps1  cargo-msvc.bat  cargo-msvc.ps1  gen-icon.ps1
sidecar/: BUILDING.md  Program.cs  README.md  SysmonSensor.csproj
src/: app.html
src-tauri/: Cargo.toml  installer-hooks.nsh  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: appbar.rs  compact_menu.rs  corner_position.rs  cpu_monitor.rs  cpu_temp.rs  disk_monitor.rs  event_logger.rs  gpu_monitor.rs  lhm_bridge.rs  lib.rs  main.rs  memory_monitor.rs  network_info.rs  network_monitor.rs  ping_monitor.rs  process_monitor.rs  session_tracker.rs  settings.rs  system_info.rs  tray.rs
src/lib/components/: AsciiChart.svelte  CompactBar.svelte  ContextMenu.svelte  CpuTab.svelte  GpuTab.svelte  MemTab.svelte  NetTab.svelte  NetworkTab.svelte  OverviewTab.svelte  ProcTab.svelte  SpeedTab.svelte  StatsTab.svelte  SysTab.svelte  TabBar.svelte  TitleBar.svelte
src/lib/stores/: network.js  system.js
src/lib/utils/: formatting.js
src/routes/: +page.svelte
src/routes/compact/: +page.svelte
src/styles/: global.css  terminal.css
