[package]
name = "netmonitor"
version = "1.0.0"
description = "Real-time network speed monitor widget"
authors = ["saqib"]
edition = "2021"

[lib]
name = "netmonitor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.32"
reqwest = { version = "0.12", features = ["blocking"] }
dirs = "6"
