[package]
name = "sysmonitor"
version = "2.0.0"
description = "Real-time PC monitoring widget"
authors = ["saqib"]
edition = "2021"

[lib]
name = "sysmonitor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.32"
reqwest = { version = "0.12", features = ["blocking"] }
dirs = "6"
wmi = "0.14"
futures = "0.3"
tokio = { version = "1", features = ["time"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dwm",
    "Win32_Security",
    "Win32_System_Threading",
] }
